# weaver

./: .gitmodules  Cargo.toml  PLAN.md  README.md  rustfmt.toml
.cargo/: config.toml
src/: adder.rs  constants.rs  edge_synth.rs  file_reader.rs  graph.rs  lib.rs  llm.rs  main.rs  model.rs  node_synth.rs  summary.rs  viz.rs
src/tools/: filesystem.rs  mod.rs  search.rs
