[package]
name = "weaver"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.30.1"
kameo = "0.18.0"
petgraph = { version = "0.8.3", features = ["serde"] }
rerun = "0.26.1"
schemars = { version = "1.0.4", features = ["uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", package = "uuid", features = ["serde", "v4"] }
